# SC_Microservice6

./: .gitignore  Cargo.toml  Dockerfile  cargo.toml
.github/workflows/: buildandpush.yml  rust.yml
backend/: Cargo.toml
backend/lib/: actions.rs  auth.rs  employee.rs  endpoints.rs  error.rs  lib.rs  microservices.rs  models.rs  request.rs  schema.rs  server.rs  session.rs  user.rs
backend/lib/Auth/: Credentials.rs  Errors.rs  Session.rs
backend/lib/Server/: routes.rs
backend/lib/auth/: Actions.rs  Citizen.rs  Employee.rs  Endpoints.rs  Request.rs  User.rs
backend/lib/server/: routes.rs
backend/migrations/2022-05-29-161401_Users/: up.sql
backend/migrations/2022-05-29-214700_Sessions/: up.sql
backend/migrations/2022-06-05-161135_PendingUsers/: down.sql  up.sql
backend/migrations/2022-06-24-104810_EmployeeInfo/: down.sql  up.sql
backend/migrations/2022-06-24-105559_EmployeeLogins/: down.sql  up.sql
backend/migrations/2022-06-24-114441_EmployeeSessions/: down.sql  up.sql
backend/src/: main.rs
backend/static_content/: login_example.html  login_example_employee.html
backend/tests/: ping.rs
config/: server.toml  server_example.toml
docs/: api.md
frontend/: Cargo.toml  index.html
frontend/src/: lib.rs  main.rs
frontend/static/: custom.css
lib/: lib.rs
public/: custom.css
src/: main.rs
static_content/: custom.css  login_example.html
tests/: ping.rs
